# zq

./: Pipfile  README.md  requirements.txt  setup.cfg  setup.py
demo/: client.py  main.py
demo/broker/: bybittest.py  okxtest.py
demo/strategy/: doublema.py  one.ipynb
stragegy/: __init__.py  balance.py  main.py
test/: download.py
test/backtest/: __init__.py  function.py  test1.py  testbacktest.py
zq/: __init__.py  cmdline.py  log.py
zq/backtest/: backengine.py  backtest.py  futurebroker.py  gridbacktest.py  risk.py  spotmocker.py  strategy.py
zq/broker/: __init__.py  binance.py  brokerManger.py  bybit.json  bybit.py  ftx.py  okex.py
zq/common/: __init__.py  config.py  const.py  message.py  tools.py
zq/config/: __init__.py  settings.yml
zq/database/: __init__.py  mongo.py
zq/engine/: __init__.py  aiowebsocket.py  barseries.py  baseBroke.py  baseEngine.py  baseStrategy.py  botEngine.py  eventengine.py  loadstrategy.py  orderManagerServer.py  rabbitmq.py  restclient.py  timeseries.py  tqueue.py
zq/indicator/: __init__.py  base.py  common.py  expression.py
zq/model/: __init__.py  account.py  bar.py  base_model.py  leg.py  order.py  order_book.py  pair.py  position.py  ticker.py  trade.py
zq/risk/: analysis.py
