[metadata]
name = zq
version = attr: zq.__version__
author =
author_email = dominolu@zquant,io
description = This is Quant system.
keywords = Quant
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
python_requires > = 3.8
include_package_data = True
packages = find:
install_requires =

[options.packages.find]
where = .
install_requires =
    click

[options.entry_points]
console_scripts =
    zq = zq.cmdline:main